<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayoutLoginPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.FingerprintCapture.LoginActivity">

    <RelativeLayout
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_20"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back_icon_primary_color" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">


        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/fab_margin"
            android:background="@drawable/upd_logo_image" />

        <TextView
            android:id="@+id/text_fingerprint_cap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo"
            android:layout_centerHorizontal="true"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_fingerprint_cap"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/edit_text_margin_horizontal"
            android:layout_marginTop="@dimen/edit_text_margin_vertical"
            android:layout_marginRight="@dimen/edit_text_margin_horizontal"
            android:layout_marginBottom="@dimen/edit_text_margin_vertical"
            android:inputType="textEmailAddress"
            android:background="@drawable/custom_edit_text"
            android:hint="@string/enter_username"
            android:padding="@dimen/edit_text_padding"
            android:singleLine="true" />

        <LinearLayout
            android:id="@+id/progress_bar_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_fingerprint_cap"
            android:layout_centerHorizontal="true"
            android:elevation="@dimen/elevation_progress"
            android:orientation="vertical"
            android:padding="@dimen/fab_margin"
            android:visibility="gone">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" />

            <ProgressBar
                android:id="@+id/circularProgressbar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:indeterminate="false"
                android:max="100"
                android:padding="@dimen/button_padding"
                android:progress="50"
                android:progressDrawable="@drawable/circular_progress_bar"
                android:secondaryProgress="100"
                android:visibility="gone" />
            <!-- <TextView
                 android:id="@+id/tv_progress"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/colorPrimaryDark"
                 android:textSize="@dimen/progress_text"
                 android:layout_gravity="center_horizontal"
                 />-->
            <!-- <TextView
                 android:id="@+id/tv_loading"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/loading"
                 android:textColor="@color/colorPrimaryDark"
                 android:layout_gravity="center_horizontal"
                 />-->

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_user_name"
            android:layout_marginLeft="@dimen/edit_text_margin_horizontal"
            android:layout_marginTop="@dimen/edit_text_margin_vertical"
            android:layout_marginRight="@dimen/edit_text_margin_horizontal"
            android:layout_marginBottom="@dimen/edit_text_margin_vertical">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_edit_text"
                android:drawablePadding="@dimen/edit_text_padding"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:padding="@dimen/edit_text_padding"
                android:singleLine="true" />

            <ImageView
                android:id="@+id/password_visibility"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_margin="@dimen/edit_text_padding"
                android:background="@drawable/password_hide_icon"
                android:visibility="gone" />
        </RelativeLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_password"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/buttons_margin"
            android:background="@color/colorPrimaryDark"
            android:paddingLeft="@dimen/button_padding"
            android:paddingRight="@dimen/button_padding"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_login"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/request_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/request_an_account_with_upd"
                android:textColor="@color/link_color" />

            <TextView
                android:id="@+id/more_app_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/request_more_app_info"
                android:textColor="@color/link_color" />

            <TextView
                android:id="@+id/send_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="5dp"
                android:text="@string/email_updurns_com"
                android:textColor="@color/link_color" />

            <TextView
                android:id="@+id/call"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/_800_590_4133"
                android:textColor="@color/link_color" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>

