<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/action_bar_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:background="@color/colorWhite">
    <RelativeLayout
        android:id="@+id/upper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true">

        <ImageButton
            android:id="@+id/action_bar_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_10"
            android:layout_marginLeft="@dimen/margin_10"
            android:layout_marginTop="@dimen/margin_25"
            android:background="@drawable/back_icon_primary_color"
            android:src="@drawable/back_icon_primary_color" />

        <TextView
            android:id="@+id/text_view_fingerprint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_20"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text_upload_screen_size"
            android:textStyle="bold" />
    </RelativeLayout>
        <RelativeLayout
            android:id="@+id/verify_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_fingerPrint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:contentDescription="thumbicon"
                android:src="@drawable/finger_print" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:orientation="vertical">

                <com.FingerprintCapture.CustomComponents.CustomButton
                    android:id="@+id/bt_scan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_10"
                    android:layout_marginLeft="@dimen/margin_20"
                    android:layout_marginRight="@dimen/margin_20"
                    android:onClick="onScan"
                    android:background="@drawable/round_button_drawable"
                    android:text="@string/scan"
                    android:textColor="@color/colorWhite" />

                <com.FingerprintCapture.CustomComponents.CustomButton
                    android:id="@+id/bt_save"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_20"
                    android:layout_marginLeft="@dimen/margin_20"
                    android:layout_marginRight="@dimen/margin_20"
                    android:background="@drawable/round_button_drawable"
                    android:enabled="false"
                    android:text="@string/save"
                    android:textColor="@color/colorWhite"
                    android:visibility="gone" />

                <com.FingerprintCapture.CustomComponents.CustomButton
                    android:id="@+id/bt_verify"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_20"
                    android:layout_marginLeft="@dimen/margin_20"
                    android:layout_marginRight="@dimen/margin_20"
                    android:background="@drawable/round_button_drawable"
                    android:enabled="false"
                    android:onClick="onVerify"
                    android:text="@string/verify"
                    android:textColor="@color/colorWhite"
                    android:visibility="visible" />
            </LinearLayout>
        </RelativeLayout>

        <FrameLayout
            android:id="@+id/ly_notifyOverlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.6"
                android:background="@color/colorBlack"
                android:contentDescription="@string/response" />

            <com.cunoraz.gifview.library.GifView
                android:id="@+id/responsegif"
                android:layout_width="@dimen/gif_150dp"
                android:layout_height="@dimen/gif_150dp"
                android:layout_gravity="center" />
        </FrameLayout>
    </RelativeLayout>
